[package]
name = "rbatis-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rbson (required)
serde = { version = "1", features = ["derive"] }
rbson = "2.0"

# logging lib(required)
log = "0.4"
fast_log="1.3"

# rbatis (required) default is ```all-database```  +  ```runtime-tokio-rustls```
rbatis =  { version = "3.1" } 

tokio = { version = "1.17.0", features = ["full"] }


axum = "0.4.7"

serde_json = "1.0.79"

tracing = "0.1.32"

hyper = "0.14.17"

tower = "0.4.12"

tower-http = "0.2.5"
