[package]
name = "test-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
tracing = "0.1"
# 用于订阅正在发生的日志、监控事件
tracing-subscriber = "0.3"
color-eyre = "0.6.1"
tracing-appender = "0.2"
tracing-error = "0.2.0"
chrono = "0.4.19"
# fmt examples
snafu = "0.7.1"
thiserror = "1.0.26"